# fp-oa-dict

./: Lab2.opam  README.md  dune-project
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/default/: Lab2.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: Lab2_lib.cma  Lab2_lib.cmxa  Lab2_lib.cmxs  lab2_lib.ml-gen
_build/default/lib/.Lab2_lib.objs/: lab2_lib__Oa_dict.impl.d  lab2_lib__Oa_dict.intf.d
_build/default/lib/.Lab2_lib.objs/byte/: lab2_lib.cmi  lab2_lib.cmo  lab2_lib.cmt  lab2_lib__Oa_dict.cmi  lab2_lib__Oa_dict.cmo  lab2_lib__Oa_dict.cmt  lab2_lib__Oa_dict.cmti
_build/default/lib/.Lab2_lib.objs/native/: lab2_lib.cmx  lab2_lib__Oa_dict.cmx
_build/default/lib/.formatted/: dune
_build/default/lib/.merlin-conf/: lib-Lab2_lib
_build/default/test/.formatted/: dune
_build/default/test/.merlin-conf/: exe-test_Lab2
_build/default/test/.test_Lab2.eobjs/byte/: dune__exe__Test_Lab2.cmi  dune__exe__Test_Lab2.cmti
_build/default/test/.test_Lab2.eobjs/native/: dune__exe__Test_Lab2.cmx
_build/install/default/lib/Lab2/: dune-package
lib/: oa_dict.ml  oa_dict.mli
test/: dune  test_Lab2.ml
